// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Appointment details should hide comment section when there is no comment to display 1`] = `
<styled.div>
  <styled.div>
    <strong>
      Appointment type
    </strong>
    <styled.div>
      ACT
    </styled.div>
  </styled.div>
  <styled.div>
    <strong>
      Appointment location
    </strong>
    <styled.div>
      GYM
    </styled.div>
  </styled.div>
  <styled.div>
    <strong>
      Date and time 
    </strong>
    <styled.div>
      <div>
        Thursday
      </div>
      10/10/2019 - 21:00
       
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`Appointment details should render correctly 1`] = `
<styled.div>
  <styled.div>
    <strong>
      Appointment type
    </strong>
    <styled.div>
      ACT
    </styled.div>
  </styled.div>
  <styled.div>
    <strong>
      Appointment location
    </strong>
    <styled.div>
      GYM
    </styled.div>
  </styled.div>
  <styled.div>
    <strong>
      Date and time 
    </strong>
    <styled.div>
      <div>
        Wednesday
      </div>
      20/03/2019 - 21:00
       
    </styled.div>
  </styled.div>
  <styled.div>
    <strong>
      Comments
    </strong>
    <styled.div>
      test
    </styled.div>
  </styled.div>
  <styled.div>
    <strong>
      Recurring
    </strong>
    <styled.div>
      Daily
      , 
      5
       occurrences
    </styled.div>
    <styled.div>
      Ends 
      Sunday, March 24th 2019
    </styled.div>
  </styled.div>
</styled.div>
`;
